# atomic-habits

./: .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: pyproject.toml
backend/app/: backend_pre_start.py  main.py
backend/app/core/: config.py
