[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = "An intuitive habit tracking app designed to help you build and maintain positive routines through customizable goals and progress visualization."
authors = ["Krishna Madhavan <krishnamadhavan07@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
black = "^24.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"

[tool.black]
line-length = 88

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 88
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
line_length = 88
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "venv/"
skip_glob = "**/migrations/*.py"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
